--- a/index.html
+++ b/index.html
@@ -7,5 +7,74 @@
   </head>
   <body>
     <h1>elel6021</h1>
+    <h2>About</h2>
+    <p>
+      マンション管理に詳しいです<br>
+      でもそれ以外のこともしたいです。
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>elel6021</li>
+      <li>東京都</li>
+      <li>マンション管理, 競技プログラミング</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <th>OS</th>
+        <td>Windows, Ubuntu</td>
+      </tr>
+      <tr>
+        <th>Engine, Frameworks</th>
+        <td>boostrap</td>
+      </tr>
+      <tr>
+        <th>Tool, MiddleWare</th>
+        <td>Github</td>
+      </tr>
+      <tr>
+        <th>資格・免許</th>
+        <td>応用情報処理技術者, 情報セキュリティマネジメント</td>
+      </tr>
+    </table>
+
+    <h3>Works</h3>
+    <p>マンションを管理しています。</p>
+    <ul>
+      <li><a href="https://github.com/">GitHub</a></li>
+      <li><a href="https://qiita.com/">Qiita</a></li>
+      <li><a href="https://zenn.dev/">Zenn</a></li>
+      <li>
+        作った作品
+        <ul>
+          <li><a href="https:elel6021.github.io/assesment/assesment.html">あなたのいいところ診断</a></li>
+        </ul>
+      </li>
+    </ul>
+
+    <h3>Contact</h3>
+    <p>コンタクトは取れません。</p>
+    <ul>
+      <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+    </ul>
+
+    <h3>History</h3>
+    <p>学歴、職歴、アルバイト、インターン経験など。</p>
+    <table>
+      <tr>
+        <th>2025 年</th>
+        <td>ZEN大学<a href="https://zen.ac.jp/">ZEN大学</a> 入学</td>
+      </tr>
+      <tr>
+        <th>2017 年</th>
+        <td>株式会社フージャースリビングサービス <a href="https://nnn.ed.jp/">フージャースリビングサービス</a> 入社</td>
+      </tr>
+      <tr>
+        <th>2022 年</th>
+        <td>神河チャンピオンシップ103位<a href="https://www.linkedin.com/">LinkedIn</a></td>
+      </tr>
+    </table>
   </body>
 </html>
