--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" rel="stylesheet">
     <title>elel6021のポートフォリオ</title>
   </head>
   <body>
@@ -65,15 +66,15 @@
     <table>
       <tr>
         <th>2025 年</th>
-        <td>ZEN大学<a href="https://zen.ac.jp/">ZEN大学</a> 入学</td>
+        <td><a href="https://zen.ac.jp/">ZEN大学</a> 入学</td>
       </tr>
       <tr>
         <th>2017 年</th>
-        <td>株式会社フージャースリビングサービス <a href="https://nnn.ed.jp/">フージャースリビングサービス</a> 入社</td>
+        <td><a href="https://www.hoosiers.co.jp/livingservice/">株式会社フージャースリビングサービス </a> 入社</td>
       </tr>
       <tr>
         <th>2022 年</th>
-        <td>神河チャンピオンシップ103位<a href="https://www.linkedin.com/">LinkedIn</a></td>
+        <td><a href="https://magic.gg/events/neon-dynasty-championship">神河チャンピオンシップ103位</a></td>
       </tr>
     </table>
   </body>
