--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       </tr>
       <tr>
         <th>資格・免許</th>
-        <td>応用情報処理技術者, 情報セキュリティマネジメント</td>
+        <td>応用情報技術者, 情報セキュリティマネジメント</td>
       </tr>
     </table>
 
     <h3>Works</h3>
-    <p>マンションを管理しています。</p>
+    <p>主にマンションを管理しています。</p>
     <ul>
       <li><a href="https://github.com/">GitHub</a></li>
       <li><a href="https://qiita.com/">Qiita</a></li>
