--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>elel6021のポートフォリオ</title>
   </head>
   <body>
-    <img src="kodomo.jpg" width="280">
+    <img src="kodomo.jpg" width="280"></img>
     <h1>elel6021</h1>
     <h2>About</h2>
     <p>
@@ -78,5 +78,6 @@
         <td><a href="https://magic.gg/events/neon-dynasty-championship">神河チャンピオンシップ103位</a></td>
       </tr>
     </table>
+  <iframe width="560 height="315" src="https://youtu.be/Z07a1lpDpp4?si=FCsn7Zu864rCnEUq"></iframe>
   </body>
 </html>
