--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>elel6021のポートフォリオ</title>
   </head>
   <body>
-    <img src="kodomo.jpg" width="280"></img>
+    <img src="kodomo.png" width="280">
     <h1>elel6021</h1>
     <h2>About</h2>
     <p>
