--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h3>Contact</h3>
     <p>コンタクトは取れません。</p>
     <ul>
-      <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+      <li><a href="https://www.linkedin.com/in/%E4%BC%B8%E4%BD%B3-%E9%88%B4%E6%9C%A8-98b9a1369/">LinkedIn</a></li>
     </ul>
 
     <h3>History</h3>
