--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>elel6021</h1>
-    <img src="kodomo.jpg" width="280">
+    <img src="20240505_112946.jpg" width="280">
     <h2>About</h2>
     <p>
       マンション管理に詳しいです<br>
