--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>elel6021</h1>
-    <img src="20240505_112946.jpg" width="280" height="280">
+    <img src="20240505_112946.jpg" width="280" height="400">
     <h2>About</h2>
     <p>
       マンション管理に詳しいです<br>
@@ -45,9 +45,7 @@
     <h3>Works</h3>
     <p>主にマンションを管理しています。</p>
     <ul>
-      <li><a href="https://github.com/">GitHub</a></li>
-      <li><a href="https://qiita.com/">Qiita</a></li>
-      <li><a href="https://zenn.dev/">Zenn</a></li>
+      <li><a href="https://github.com/elel6021">GitHub</a></li>
       <li>
         作った作品
         <ul>
